[tool.poetry]
name = "book_search"
version = "0.1.0"
description = "Sample API to search books using FastAPI and ElasticSearch"
readme = "README.rst"
authors = ["Iacopo Spalletti <i.spalletti@nephila.it>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.2"}
elasticsearch-dsl = "^7.3.0"
elasticsearch = {extras = ["async"], version = "^7.9.0"}
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
Sphinx = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
livereload = "^2.6.3"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
typer = "^0.3.2"
Faker = "^4.14.2"
ipdb = "^0.13.4"
httpx = "^0.16.1"
pytest-xdist = "^2.1.0"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "book_search:main"
debug = "book_search:debug"

[tool.black]
line-length = 119
target-version = ["py36"]
include = 'book_search/*py'

[tool.towncrier]
package = "book_search"
directory = "changes"
filename = "HISTORY.rst"
title_format = "{version} ({project_date})"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = true
ignore-nested-functions = true
fail-under = 0
exclude = ["docs", ".tox"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
