[tool.poetry]
name = "book_search"
version = "0.1.0"
description = "Sample API to search books using FastAPI and ElasticSearch"
readme = "README.rst"
authors = ["Iacopo Spalletti <i.spalletti@nephila.it>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
elasticsearch-dsl = "^7.4.1"
elasticsearch = {version = "<8", extras = ["async"]}
python-dotenv = "^0.19.1"
uvicorn = "^0.17.0"
typer = "^0.4.0"
ujson = "~=5.3.0"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
livereload = "^2.6.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^2.10.1"
httpx = "^0.23.0"
pytest-xdist = "^2.4.0"
coveralls = "^2.1.2"
trio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "book_search:main"
debug = "book_search:debug"

[tool.black]
line-length = 119
target-version = ["py38"]
include = 'book_search/*py'

[tool.towncrier]
package = "book_search"
directory = "changes"
filename = "HISTORY.rst"
title_format = "{version} ({project_date})"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = true
ignore-nested-functions = true
fail-under = 0
exclude = ["docs", ".tox"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "knocker"
line_length = 119
multi_line_output = 3
use_parentheses = true

[tool.ruff]
ignore = []
line-length = 119
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10
